trying to fix mobile overflow

--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -1,6 +1,9 @@
 html {
   overflow-x: clip;
 }
+body {
+  overflow: clip;
+}
 
 
 /* ------------------------------------------------------ */
